# digital-menu-board

./: .gitignore  BUGFIX_REPORT.md  GUIDE.md  IMPROVEMENTS.md  README.WEBOS.md  README.md  REQUIREMENTS_CHECKLIST.md  TAURI_KIOSK_SETUP.md  TODO_WEBOS.md  VERIFICATION_CHECKLIST.md  WEBOS_ARCHITECTURE.md  WEBOS_COMPLETION_SUMMARY.md  WEBOS_DEPLOYMENT_CHECKLIST.md  WEBOS_IMPLEMENTATION.md  WEBOS_SETUP.md  debug-webos.js  index.html  package-lock.json  package-webos.py  package.json  tsconfig.json  vite.config.ts  webos-build.ps1  webos-build.sh  webos-emulator.py
.github/workflows/: webos-build.yml
src/: App.tsx  main.tsx  styled.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/features/menu-board/: index.ts
src/features/playlist/: DigitalSignagePlayer.styles.ts  DigitalSignagePlayer.tsx  index.ts  usePlaylist.ts
src/mock/: MockMenuService.ts  apiService.ts  index.ts
src/shared/components/: Badge.styles.ts  Badge.tsx  Button.styles.ts  Button.tsx  Card.styles.ts  Card.tsx  ErrorBoundary.styles.ts  ErrorBoundary.tsx  Loading.styles.ts  Loading.tsx  index.ts
src/shared/hooks/: index.ts  useInterval.ts  useLocalStorage.ts  useMenuData.ts  useOnline.ts
src/shared/services/: ApiMenuService.ts  MenuService.ts  index.ts
src/shared/store/: index.ts  useMenuBoardStore.ts
src/shared/themes/: GlobalStyles.tsx  ThemeProvider.tsx  index.ts  presets.ts
src/shared/types/: index.ts  theme.ts
src/webos/: RemoteControl.ts  index.ts  webos-api.ts  webos-utils.ts
webos/: appinfo.json
(+8 files in other folders)
